crates/friction-cli/tests/snapshots/snapshot__check_json__readme_llm_0859e6e20fb1cf84.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "readme",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 9.2,
      "lo": 3.4918032786885247,
      "hi": 8.028436018957345,
      "in_envelope": false
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.891962805479819,
      "lo": 3.4227587963188086,
      "hi": 7.179325061127496,
      "in_envelope": false
    },
    {
      "name": "sentence_length_cv",
      "value": 0.8578220440738935,
      "lo": 0.8732200181547038,
      "hi": 1.3591689344136941,
      "in_envelope": false
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.1847133757961785,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.06153846153846154,
      "lo": 0.0,
      "hi": 0.014218009478672985,
      "in_envelope": false
    },
    {
      "name": "contraction_ratio",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.7857142857142857,
      "lo": 0.5,
      "hi": 0.9138888888888889,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.25,
      "lo": 1.0357142857142858,
      "hi": 1.2946428571428572,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.41137667560372115,
      "lo": 0.179177669748504,
      "hi": 0.5170232290628554,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 1.6722408026755853,
      "lo": 0.0,
      "hi": 3.9682539682539684,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.03076923076923077,
      "lo": 0.0,
      "hi": 0.011363636363636364,
      "in_envelope": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 32.25806451612903,
      "lo": 0.0,
      "hi": 21.634615384615383,
      "in_envelope": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 8.488964346349745,
      "lo": 8.59106529209622,
      "hi": 35.46099290780142,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 18.67572156196944,
      "lo": 10.380622837370241,
      "hi": 43.04635761589404,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 22.07130730050934,
      "lo": 4.926108374384237,
      "hi": 98.26589595375722,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 13.582342954159593,
      "lo": 0.0,
      "hi": 14.705882352941176,
      "in_envelope": true
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.0,
      "lo": 0.007874015748031496,
      "hi": 0.13793103448275862,
      "in_envelope": false
    },
    {
      "name": "top_opener_concentration",
      "value": 0.11666666666666667,
      "lo": 0.04424778761061947,
      "hi": 0.16091954022988506,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "literal",
      "frame_id": "sub.leverage_3sg",
      "start": 119,
      "end": 128,
      "line": 5,
      "column": 87,
      "score": null
    },
    {
      "channel": "literal",
      "frame_id": "sub.utilize_base",
      "start": 506,
      "end": 513,
      "line": 9,
      "column": 4,
      "score": null
    },
    {
      "channel": "literal",
      "frame_id": "span.simply",
      "start": 2943,
      "end": 2949,
      "line": 56,
      "column": 111,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 5095,
      "end": 5130,
      "line": 116,
      "column": 315,
      "score": 16
    }
  ],
  "tell_counts": {
    "dms": 1,
    "span": 1,
    "sub": 2
  },
  "dms": [
    {
      "family": "qwen",
      "mean_machine": 1.4961715160796325,
      "mean_human": 1.551301684532925,
      "differential": -0.05513016845329255,
      "token_count": 653
    },
    {
      "family": "gemma",
      "mean_machine": 1.6278713629402757,
      "mean_human": 1.551301684532925,
      "differential": 0.07656967840735063,
      "token_count": 653
    },
    {
      "family": "llama",
      "mean_machine": 1.5038284839203675,
      "mean_human": 1.551301684532925,
      "differential": -0.04747320061255755,
      "token_count": 653
    },
    {
      "family": "granite",
      "mean_machine": 14.522205206738132,
      "mean_human": 1.551301684532925,
      "differential": 12.970903522205207,
      "token_count": 653
    },
    {
      "family": "claude",
      "mean_machine": 1.4257274119448697,
      "mean_human": 1.551301684532925,
      "differential": -0.1255742725880553,
      "token_count": 653
    }
  ]
}
